addons/monitoring/grafana/grafana-ingress.yaml
# content of grafana-ingress.yaml
---
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ui
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: http
    # kubernetes.io/ingress.class: ambassador
spec:
  rules:
    - host: grafana.dev.lan
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service: 
                name: grafana
                port: 
                  number: 3000
